# org-charts

./: .gitignore  Orthogonal.gv  README.md  dagre-diagram.py  index.py  main.py  pyproject.toml  test.gv
.github/workflows/: test.yml
automatedorgcharts/: Organization.py  __init__.py  convert_to_date.py  has_permanently_left.py  has_temporarily_left.py  is_current_employee.py  is_in_determinate_position.py  is_in_indeterminate_position.py  is_on_temporary_leave.py  visualisation.py
scripts/: index.py  test.py
tests/: test_Organization.py  test_convert_to_date.py  test_has_permanently_left.py  test_has_temporarily_left.py  test_is_current_employee.py  test_is_in_determinate_position.py  test_is_in_indeterminate_position.py  test_is_on_temporary_leave.py  test_to_date.py
