[project]
name = "automatedOrgCharts"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Caroline Mimeault", email = "carolinemimeault@gmail.com" }]
dependencies = ["dagre-py>=0.1.7", "setuptools>=75.1.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
diagram = "python scripts/test.py"
employees = "python scripts/index.py"
