[project]
name = "automatedOrgCharts"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Caroline Mimeault", email = "carolinemimeault@gmail.com" }]
dependencies = [
    "dagre-py>=0.1.7",
    "setuptools>=75.1.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "graphviz>=0.20.3",
    "anytree>=2.12.1",
    "pyYAML>=6.0.2",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false


[tool.pdm.scripts]
viz = "python automatedorgcharts/visualisation.py"
main = "python main.py"
test = "pytest -s --cov=. tests/"
push-hub = "git push origin main"
push-ado = "git push ado main"


[tool.coverage.run]
omit = [
    ".venv/*",
    "conftest.py",
    "dagre-diagram.py",
    "tests/__init__.py",
    "automatedorgcharts/__init__.py",
    "tests/*",
]
